# fingent_prod

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRACTS.md  README.md  RELEASE_CHECKLIST.md  build.md  claude1.md  claude2.md  docker-compose.yml  roles.md  run.md
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/app/: e2e_server.py  main.py
backend/app/agents/: discovery.py
backend/app/agents/_template/: __init__.py  orchestrator.py  router.py  schemas.py  service.py  subagents.py
backend/app/agents/core/: __init__.py  gateway.py  models.py  orchestrator.py  runner.py
backend/app/api/: context.py  platform.py
backend/app/audit/: __init__.py  log.py
backend/app/connectors/: __init__.py  base.py  fake.py
backend/app/guardrails/: __init__.py  engine.py
backend/app/integration/: __init__.py  chain.py  chains.py  fanout.py  tool_audit.py
backend/app/jobs/: __init__.py  progress.py  queue.py
backend/app/observability/: __init__.py  run.py  tracing.py
backend/tests/: test_sanity.py
backend/tests/agents/: test_discovery.py
backend/tests/api/: test_platform.py
backend/tests/audit/: test_audit_log.py
backend/tests/connectors/: test_tool.py
backend/tests/fixtures_agents/: __init__.py  loose.py
backend/tests/guardrails/: test_engine.py
backend/tests/integration/: conftest.py  test_cross_agent_enterprise.py  test_cross_agent_fs.py  test_guardrail_audit.py  test_load_fanout.py
backend/tests/jobs/: test_queue.py  test_sse.py
backend/tests/observability/: test_traced_run.py  test_tracing.py
(+320 files in other folders)
